--- a/weather-app-pwa/public/index.html
+++ b/weather-app-pwa/public/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Modern PWA Weather React Application" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+      </style>
     <title>Weather App|PWA</title>
   </head>
   <body>
